--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="inner">
           <h3 class="masthead-brand">Terra Advisory</h3>
           <nav class="nav nav-masthead">
-            <a class="nav-link nav-social" href="#" title="Linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+            <a class="nav-link nav-social" href="https://www.linkedin.com/company/terra-advisory-partners/" title="Linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
             <a class="nav-link nav-social" href="#" title="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
           </nav>
         </div>
@@ -47,36 +47,32 @@
               </button>
             </div>
             <div class="modal-body">
-              <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-        <div class="form-floating mb-3">
-            <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
-            <label for="emailAddress">Email Address</label>
-            <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.</div>
-            <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
-        </div>
-        <div class="form-floating mb-3">
-            <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
-            <label for="message">Message</label>
+              <form id="contactForm" data-sb-form-api-token="132c68d9-f25e-4bee-a849-c9d7ebcf76ef">
+                <div class="form-floating mb-3">
+                    <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
+                    <label for="emailAddress">Email Address</label>
+                  <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.</div>
+                <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
+                </div>
+              <div class="form-floating mb-3">
+                <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
+                <label for="message">Message</label>
             <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
         </div>
         <div class="d-none" id="submitSuccessMessage">
             <div class="text-center mb-3">
                 <div class="fw-bolder">Form submission successful!</div>
-                <p>To activate this form, sign up at</p>
-                <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
             </div>
         </div>
         <div class="d-none" id="submitErrorMessage">
             <div class="text-center text-danger mb-3">Error sending message!</div>
         </div>
-        <div class="d-grid">
-            
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" id="submitButton" type="submit">Submit</button>
         </div>
     </form>
             </div>
-            <div class="modal-footer">
-              <bbutton type="button" class="btn btn-default" id="submitButton" type="submit">Submit</button>
-            </div>
+            
           </div>
         </div>
     </div>
