Logo in Masthead update
+

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <div class="cover-container">
       <div class="masthead clearfix">
         <div class="inner">
-          <h3 class="masthead-brand">Terra Advisory</h3>
+          <div class="masthead-brand">
+            <img src="img/logo.png" alt="Terra Advisory Logo" class="logo" width="35" height="35">
+            <h3 class="inline-logo">Terra Advisory</h3>
+          </div>
           <nav class="nav nav-masthead">
             <a class="nav-link nav-social" href="https://www.linkedin.com/company/terra-advisory-partners/" title="Linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
             <a class="nav-link nav-social" href="#" title="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
