--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         </div>
       </div>      
       <div class="inner cover">
-        <h1 class="cover-heading">Powered by <br>Mind + Machine</h1>
-        <p class="lead cover-copy">Terra Advisory offers independent advisory services leveraging the best of machine learning and human expertise in the fields of Corporate Behavioural Risk analytics, ESG, Sustainability and Big Data. </p>
+        <h1 class="cover-heading">human intuition machine power</h1>
+        <p class="lead cover-copy">
+          Terra Advisory harnesses the transformative synergy of machine learning and human expertise to revolutionize Corporate Behavioral Risk analytics, ESG, Sustainability, and Big Data. <br>Unleash the power of data-driven insights </p>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Learn more</button></p>
       </div>
       <div class="mastfoot">
