--- a/index.html
+++ b/index.html
@@ -31,10 +31,32 @@
         </div>
       </div>      
       <div class="inner cover">
-        <h1 class="cover-heading">human intuition machine power</h1>
+        <h1 class="cover-heading">Transforming challenges into opportunities.</h1>
         <p class="lead cover-copy">
-          Terra Advisory harnesses the transformative synergy of machine learning and human expertise to revolutionize Corporate Behavioral Risk analytics, ESG, Sustainability, and Big Data. <br>Unleash the power of data-driven insights </p>
-        <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Learn more</button></p>
+          Welcome to Terra Advisory, where we specialize in identifying unique investment opportunities in the private non-listed sector. Our team of experts is dedicated to providing tailored financial solutions to our clients, including high net worth individuals, family offices, and private equity firms.<br></p>
+          <p><font size="85">***</font></p>
+
+          <br>
+
+
+
+
+          <p align="left">Our approach is based on a deep understanding of the market and a commitment to delivering exceptional results. We carefully analyze each opportunity to ensure that it aligns with our clients' goals and objectives. Our services include:</p>
+
+          <ul align="left">
+
+
+            <li><b>Investment Opportunity Identification:</b> We identify promising investment opportunities in the private non-listed sector and present them to our clients for consideration.</li>
+            <li><b>Transaction Advisory:</b> We provide transaction advisory services to assist our clients in navigating complex investment transactions.</li>
+            <li><b>Growth Advisory:</b> We offer growth advisory services to SME businesses, helping them achieve their growth objectives.</li>
+            <li><b>ESG Evaluation:</b> We conduct comprehensive ESG evaluations to assess the sustainability and long-term viability of potential investments.</li>
+            <li><b>Climate Capital and Risk:</b> We help our clients navigate climate capital and risk considerations, providing insights into the potential impact of climate change on their investment portfolios.</li>
+          </ul>
+
+          <p align="left">At Terra Advisory, we are committed to delivering value to our clients and helping them achieve their financial goals. Contact us today to learn more about how we can help you.</p>
+          <br>
+
+        <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Contact us</button></p>
       </div>
       <div class="mastfoot">
         <div class="inner">
