--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="inner cover">
         <h1 class="cover-heading">Transforming challenges into opportunities.</h1>
         <p class="lead cover-copy">
-          Welcome to Terra Advisory, where we specialize in identifying unique investment opportunities in the private non-listed sector. Our team of experts is dedicated to providing tailored financial solutions to our clients, including high net worth individuals, family offices, and private equity firms.<br></p>
+          <b></b>Welcome to Terra Advisory, where we specialize in identifying unique investment opportunities in the private non-listed sector. Our team of experts is dedicated to providing tailored financial solutions to our clients, including high net worth individuals, family offices, and private equity firms.</b><br></p>
           <p><font size="85">***</font></p>
 
           <br>
