--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="inner cover">
         <h1 class="cover-heading">Evolving Perspectives Maximizing Opportunities</h1>
         <p class="lead cover-copy">
-          Embracing adaptability is paramount for navigating evolving economic landscapes. At the core of our approach to fostering business growth and scalability lies strategic transformation. We empower you to thrive amidst change, leveraging innovative strategies to seize opportunities and drive sustainable success.<br></p>
+           Terra Advisory is an independent advisory boutique and placement agency. We specialise in providing bespoke executive consultancy services and special opportunity advisory.<br></p>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Contact us</button></p>
       </div>
       <div class="mastfoot">
