--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="inner cover">
         <h1 class="cover-heading">Evolving Perspectives Maximizing Opportunities</h1>
         <p class="lead cover-copy">
-           Terra Advisory is an independent advisory boutique and placement agency. We specialise in providing bespoke executive consultancy services and special opportunity advisory.<br></p>
+           Terra Advisory is an independent boutique manager and placement agency. We specialise in providing bespoke executive consultancy services and special opportunity advisory.<br></p>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Contact us</button></p>
       </div>
       <div class="mastfoot">
