--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
       <div class="inner cover">
         <h1 class="cover-heading">Evolving Perspectives Maximizing Opportunities</h1>
         <p class="lead cover-copy">
-          Terra Advisory is a boutique firm specializing in private markets investment and growth consultancy. We offer tailored executive services and expert advisory in special opportunities, serving as a trusted partner for our clients' strategic endeavors.<br></p>
+          Terra Advisory is a leading curator of high-yield, differentiated investment opportunities across a diverse range of asset classes. Our expertise spans private, public, and semi-liquid markets, leveraging multiple strategies tailored to meet the unique needs of sophisticated investors.
+
+We excel at identifying niche, high-potential investments that are often overlooked by traditional asset managers. From exclusive private deals to liquid strategies that offer flexibility without sacrificing return potential, Terra Advisory ensures that your portfolio is both diversified and primed for growth.
+
+Our approach combines deep market insight with rigorous due diligence, enabling us to uncover unique opportunities that align with both long-term goals and immediate market conditions. We deliver strategic solutions that capitalize on today’s market dynamics while positioning our clients for sustained success across economic cycles..<br></p>
         <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">Contact us</button></p>
       </div>
       <div class="mastfoot">
